--- a/app/netlify.toml
+++ b/app/netlify.toml
@@ -2,5 +2,10 @@
   command = "next build"
   publish = ".next"
 
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
+  
 [[plugins]]
   package = "@netlify/plugin-nextjs"
