--- a/app/netlify.toml
+++ b/app/netlify.toml
@@ -1,11 +1,10 @@
 [build]
-  command = "next build"
+  command = "npm run build"
   publish = ".next"
 
-[[redirects]]
-  from = "/*"
-  to = "/index.html"
-  status = 200
-  
 [[plugins]]
   package = "@netlify/plugin-nextjs"
+
+[build.environment]
+  NEXT_TELEMETRY_DISABLED = "1"
+  NEXT_PUBLIC_ROOT_URL = "https://fintech-website.netlify.app/"
