--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,6 @@
 [build]
-  command = "npm run build"
-  publish = ".next"
-  functions = "netlify/functions"
+  command = "npm run build && next export"
+  publish = "out"
 
 [[plugins]]
   package = "@netlify/plugin-nextjs"
